...
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    tools:context=".MakeAPlan.PassFailScreen">


    <ListView
        android:id="@+id/passFailListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
...
