<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MakeAPlan.MakeAPlanYearScreen">

    <TextView
        android:id="@+id/textViewCourseCode"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:background="#424242"
        android:text="TextView"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCourseName"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textViewCourseCode"
        android:layout_gravity="center"
        android:background="#424242"
        android:text="textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseCode" />

    <CheckBox
        android:id="@+id/courseCheckBox"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_marginStart="291dp"
        android:layout_marginLeft="291dp"
        android:background="#424242"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCourseCode"
        app:layout_constraintStart_toStartOf="@+id/textViewCourseName"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>