...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".QuickView">

    <ListView
        android:id="@+id/ListViewIdeal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
